# amnesia

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.github/workflows/: OSBuild.yml  build_test_Linux.yml  build_test_linux.yml  build_test_macos.yml  build_test_windows.yml
cmake/: AmnesiaConfig.cmake.in
include/amnesia/: core.hpp
src/: app.cpp  core.cpp
